--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "tsx": "^4.20.3",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.38.0",
-    "vite": "^4.5.5"
+    "vite": "^4.5.5",
+    "rollup": "^4.28.1"
   }
 }
