--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "framework": "vite",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "installCommand": "rm -rf node_modules package-lock.json && npm install --no-optional --legacy-peer-deps",
+  "installCommand": "npm ci --force",
   "rewrites": [
     {
       "source": "/manifest.json",
