Enable strict TypeScript, add error boundary, and optimize deployment
Enabled strict mode and related safety checks in tsconfig.json and enforced deployment-safe rules in ESLint. Added a comprehensive GlobalErrorBoundary component for robust error handling and reporting. Introduced a performanceMonitor service for Core Web Vitals tracking. Refactored notificationService and patientService to export both instance and bound methods for flexible imports. Enhanced Vercel deployment configuration with improved caching, security headers, and function/runtime settings. Updated types and utility functions for stricter type safety and deployment compatibility. Added new dependencies (clsx, rollup, terser) and updated some package versions.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,18 +23,17 @@
     "allowImportingTsExtensions": true,
     "noEmit": true,
     
-    // Strict mode configuration - Fully relaxed for deployment
-    "strict": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "exactOptionalPropertyTypes": false,
-    "noImplicitReturns": false,
-    "noFallthroughCasesInSwitch": false,
-    "noUncheckedIndexedAccess": false,
-    "noImplicitOverride": false,
-    "allowUnusedLabels": true,
-    "allowUnreachableCode": true,
-    "noImplicitAny": false,
+    // Strict mode configuration - Enabled for deployment safety
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "exactOptionalPropertyTypes": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    "allowUnusedLabels": false,
+    "allowUnreachableCode": false,
     
     // Additional type checking
     "forceConsistentCasingInFileNames": true,
