--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@supabase/supabase-js": "^2.53.0",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.534.0",
     "react": "^19.1.1",
@@ -73,7 +74,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.17.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@types/react-virtualized": "^9.22.2",
@@ -92,10 +93,11 @@
     "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "rollup": "^4.28.1",
+    "terser": "^5.43.1",
     "tsx": "^4.20.3",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.38.0",
-    "vite": "^4.5.5",
-    "rollup": "^4.28.1"
+    "vite": "^4.5.5"
   }
 }
