fix: remove invalid build-time environment variable from vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -129,8 +129,7 @@
   "env": {
     "NODE_ENV": "production",
     "VITE_APP_NAME": "FisioFlow",
-    "VITE_APP_VERSION": "2.0.0",
-    "VITE_BUILD_TIME": "@vercel/build-time"
+    "VITE_APP_VERSION": "2.0.0"
   },
   "regions": ["gru1"],
   "github": {
