--- a/vercel.json
+++ b/vercel.json
@@ -1,39 +1,3 @@
 {
-  "version": 2,
-  "framework": "vite",
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "installCommand": "npm install --prefer-offline --no-audit --progress=false",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        },
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        }
-      ]
-    }
-  ],
-  "env": {
-    "NODE_ENV": "production",
-    "VITE_APP_NAME": "FisioFlow",
-    "VITE_APP_VERSION": "2.0.0"
-  },
-  "regions": ["gru1"],
-  "github": {
-    "silent": true
-  },
-  "trailingSlash": false,
-  "cleanUrls": true
+  "version": 2
 }
